// Copyright Â© 2018 The Things Network Foundation, The Things Industries B.V.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "google/protobuf/duration.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/timestamp.proto";
import "lorawan-stack/api/identifiers.proto";
import "lorawan-stack/api/keys.proto";
import "lorawan-stack/api/lorawan.proto";
import "lorawan-stack/api/messages.proto";
import "lorawan-stack/api/metadata.proto";

package ttn.lorawan.v3;

option go_package = "go.thethings.network/lorawan-stack/pkg/ttnpb";

message Session {
  reserved 1; // RFU: Session ID

  // Device Address, issued by the Network Server or chosen by device manufacturer in case of testing range (beginning with 00-03).
  // Known by Network Server, Application Server and Join Server. Owned by Network Server.
  bytes dev_addr = 2 [(gogoproto.customtype) = "go.thethings.network/lorawan-stack/pkg/types.DevAddr", (gogoproto.nullable) = false];
  SessionKeys keys = 3 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
  // Last uplink frame counter value used. Network Server only. Application Server assumes the Network Server checked it.
  uint32 last_f_cnt_up = 4;
  // Last network downlink frame counter value used. Network Server only.
  uint32 last_n_f_cnt_down = 5;
  // Last application downlink frame counter value used. Application Server only.
  uint32 last_a_f_cnt_down = 6;
  // Frame counter of the last confirmed downlink message sent. Network Server only.
  uint32 last_conf_f_cnt_down = 7;
  // Time when the session started. Network Server only.
  google.protobuf.Timestamp started_at = 8 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
}

// MACParameters represent the parameters of the device's MAC layer (active or desired).
// This is used internally by the Network Server and is read only.
message MACParameters {
  option (gogoproto.populate) = false;

  // Maximum EIRP (dBm).
  float max_eirp = 1 [(gogoproto.customname) = "MaxEIRP"];
  // Uplink dwell time is set (400ms).
  bool uplink_dwell_time = 2;
  // Downlink dwell time is set (400ms).
  bool downlink_dwell_time = 3;
  // ADR: data rate index to use.
  DataRateIndex adr_data_rate_index = 4 [(gogoproto.customname) = "ADRDataRateIndex"];
  // ADR: transmission power index to use.
  uint32 adr_tx_power_index = 5 [(gogoproto.customname) = "ADRTxPowerIndex"];
  // ADR: number of retransmissions.
  uint32 adr_nb_trans = 6 [(gogoproto.customname) = "ADRNbTrans"];
  // ADR: number of messages to wait before setting ADRAckReq.
  uint32 adr_ack_limit = 7 [(gogoproto.customname) = "ADRAckLimit"];
  // ADR: number of messages to wait after setting ADRAckReq and before changing TxPower or DataRate.
  uint32 adr_ack_delay = 8 [(gogoproto.customname) = "ADRAckDelay"];
  // Rx1 delay (Rx2 delay is Rx1 delay + 1 second).
  RxDelay rx1_delay = 9;
  // Data rate offset for Rx1.
  uint32 rx1_data_rate_offset = 10;
  // Data rate index for Rx2.
  DataRateIndex rx2_data_rate_index = 11;
  // Frequency for Rx2 (Hz).
  uint64 rx2_frequency = 12;
  // Time within which a rejoin-request must be sent.
  RejoinTimeExponent rejoin_time_periodicity = 13;
  // Message count within which a rejoin-request must be sent.
  RejoinCountExponent rejoin_count_periodicity = 14;
  // Maximum uplink duty cycle (of all channels).
  AggregatedDutyCycle max_duty_cycle = 15;

  message Channel {
    option (gogoproto.populate) = false;

    // Uplink frequency of the channel (Hz).
    uint64 uplink_frequency = 1;
    // Downlink frequency of the channel (Hz).
    uint64 downlink_frequency = 2;
    // Index of the minimum data rate for uplink.
    DataRateIndex min_data_rate_index = 3;
    // Index of the maximum data rate for uplink.
    DataRateIndex max_data_rate_index = 4;
    // Channel can be used by device for uplink.
    bool enable_uplink = 5;
  }

  // Configured uplink channels and optionally Rx1 frequency.
  repeated Channel channels = 16;
  // Frequency of the class B ping slot (Hz).
  uint64 ping_slot_frequency = 17;
  // Data rate index of the class B ping slot.
  DataRateIndex ping_slot_data_rate_index = 18;
  // Frequency of the class B beacon (Hz).
  uint64 beacon_frequency = 19;
}

message EndDeviceBrand {
  string id = 1 [(gogoproto.customname) = "ID"];
  string name = 2;
  string url = 3 [(gogoproto.customname) = "URL"];
  // Logos contains file names of brand logos.
  repeated string logos = 4;
}

message EndDeviceModel {
  string brand_id = 1 [(gogoproto.customname) = "BrandID"];
  string id = 2 [(gogoproto.customname) = "ID"];
  string name = 3;
}

// Identifies an end device model with version information.
message EndDeviceVersionIdentifiers {
  string brand_id = 1 [(gogoproto.customname) = "BrandID"];
  string model_id = 2 [(gogoproto.customname) = "ModelID"];
  string hardware_version = 3;
  string firmware_version = 4;
}

// Template for creating end devices.
message EndDeviceVersion {
  option (gogoproto.populate) = false;

  // Version identifiers.
  EndDeviceVersionIdentifiers ids = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false];

  // LoRaWAN MAC version.
  MACVersion lorawan_version = 2 [(gogoproto.customname) = "LoRaWANVersion"];
  // LoRaWAN PHY version.
  PHYVersion lorawan_phy_version = 3 [(gogoproto.customname) = "LoRaWANPHYVersion"];
  // ID of the frequency plan used by this device.
  string frequency_plan_id = 4 [(gogoproto.customname) = "FrequencyPlanID"];

  // Photos contains file names of device photos.
  repeated string photos = 5;

  // Whether the device supports class B.
  bool supports_class_b = 6;
  // Whether the device supports class C.
  bool supports_class_c = 7;
  // Default MAC layer parameters, to which device is reset by default (e.g. on join or ResetInd).
  MACParameters default_mac_parameters = 8 [(gogoproto.customname) = "DefaultMACParameters"];
  // Minimum frequency the device is capable of using (Hz).
  uint64 min_frequency = 9;
  // Maximum frequency the device is capable of using (Hz).
  uint64 max_frequency = 10;
  // Whether the device resets the frame counters (not LoRaWAN compliant).
  bool resets_f_cnt = 11;
  // Whether the device uses 32-bit frame counters.
  bool uses_32_bit_f_cnt = 12 [(gogoproto.customname) = "Uses32BitFCnt"];
  // The device supports join (it's OTAA).
  bool supports_join = 13;
  // Whether the device resets the join and dev nonces (not LoRaWAN 1.1 compliant).
  bool resets_join_nonces = 14;

  // Default formatters defining the payload formats for this end device.
  MessagePayloadFormatters default_formatters = 15 [(gogoproto.nullable) = false];
}

message MACSettings {
  bool use_adr = 1 [(gogoproto.customname) = "UseADR"];
  // The ADR margin tells the network server how much margin it should add in ADR requests.
  // A bigger margin is less efficient, but gives a better chance of successful reception.
  uint32 adr_margin = 2 [(gogoproto.customname) = "ADRMargin"];
  // Deadline for the device to respond to requests from the Network Server.
  google.protobuf.Duration class_b_timeout = 3 [(gogoproto.stdduration) = true, (gogoproto.nullable) = false];
  // Deadline for the device to respond to requests from the Network Server.
  google.protobuf.Duration class_c_timeout = 4 [(gogoproto.stdduration) = true, (gogoproto.nullable) = false];
  // The interval after which a DevStatusReq MACCommand shall be sent.
  google.protobuf.Duration status_time_periodicity = 5 [(gogoproto.stdduration) = true, (gogoproto.nullable) = false];
  // Number of uplink messages after which a DevStatusReq MACCommand shall be sent.
  uint32 status_count_periodicity = 6;
}

// MACState represents the state of MAC layer of the device.
// MACState is reset on each join for OTAA or ResetInd for ABP devices.
// This is used internally by the Network Server and is read only.
message MACState {
  option (gogoproto.populate) = false;

  // Current LoRaWAN MAC parameters.
  MACParameters current_parameters = 1 [(gogoproto.nullable) = false];
  // Desired LoRaWAN MAC parameters.
  MACParameters desired_parameters = 2 [(gogoproto.nullable) = false];

  // Currently active LoRaWAN device class
  // - Device class is A by default
  // - If device sets ClassB bit in uplink, this will be set to B
  // - If device sent DeviceModeInd MAC message, this will be set to that value
  Class device_class = 3;
  // LoRaWAN MAC version.
  MACVersion lorawan_version = 4 [(gogoproto.customname) = "LoRaWANVersion"];
  // Time when the last confirmed downlink message or MAC command was scheduled.
  google.protobuf.Timestamp last_confirmed_downlink_at = 5 [(gogoproto.stdtime) = true];
  // Frame counter value of last uplink containing DevStatusAns.
  uint32 last_dev_status_f_cnt_up = 6;
  // Periodicity of the class B ping slot.
  PingSlotPeriod ping_slot_periodicity = 7;
  // A confirmed application downlink, for which an acknowledgment is expected to arrive.
  ApplicationDownlink pending_application_downlink = 8;
  // Queued MAC responses.
  // Regenerated on each uplink.
  repeated MACCommand queued_responses = 9;
  // Pending MAC requests(i.e. sent requests, for which no response has been received yet).
  // Regenerated on each downlink.
  repeated MACCommand pending_requests = 10;
  // Queued join-accept payload.
  // Set each time (re-)join request is received and removed each time a downlink is scheduled.
  bytes queued_join_accept = 11;

  // TODO: Add info about failed MAC requests
}

// Power state of the device.
enum PowerState {
  POWER_UNKNOWN = 0;
  POWER_BATTERY = 1;
  POWER_EXTERNAL = 2;
}

// Defines an End Device registration and its state on the network.
// The persistence of the EndDevice is divided between the Network Server, Application Server and Join Server.
// SDKs are responsible for combining (if desired) the three.
message EndDevice {
  option (gogoproto.populate) = false;

  EndDeviceIdentifiers ids = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
  google.protobuf.Timestamp created_at = 2 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];
  google.protobuf.Timestamp updated_at = 3 [(gogoproto.nullable) = false, (gogoproto.stdtime) = true];

  // Friendly name of the device. Stored in Entity Registry.
  string name = 4;
  // Description of the device. Stored in Entity Registry.
  string description = 5;
  // Attributes of the device. Stored in Entity Registry.
  map<string,string> attributes = 6;

  // Version Identifiers. Stored in Entity Registry.
  EndDeviceVersionIdentifiers version_ids = 7 [(gogoproto.customname) = "VersionIDs"];

  // Default service profile. Stored in Entity Registry.
  string service_profile_id = 8 [(gogoproto.customname) = "ServiceProfileID"];

  // The address of the Network Server where this device is supposed to be registered.
  // Stored in Entity Registry.
  // The typical format of the address is "host:port". If the port is omitted,
  // the normal port inference (with DNS lookup, otherwise defaults) is used.
  // The connection shall be established with transport layer security (TLS).
  // Custom certificate authorities may be configured out-of-band.
  string network_server_address = 9;
  // The address of the Application Server where this device is supposed to be registered.
  // Stored in Entity Registry.
  // The typical format of the address is "host:port". If the port is omitted,
  // the normal port inference (with DNS lookup, otherwise defaults) is used.
  // The connection shall be established with transport layer security (TLS).
  // Custom certificate authorities may be configured out-of-band.
  string application_server_address = 10;
  // The address of the Join Server where this device is supposed to be registered.
  // Stored in Entity Registry.
  // The typical format of the address is "host:port". If the port is omitted,
  // the normal port inference (with DNS lookup, otherwise defaults) is used.
  // The connection shall be established with transport layer security (TLS).
  // Custom certificate authorities may be configured out-of-band.
  string join_server_address = 11;

  // Location of the device. Stored in Entity Registry.
  map<string,Location> locations = 12;

  // Whether the device supports class B.
  // Copied on creation from template identified by version_ids, if any or from the home Network Server device profile, if any.
  bool supports_class_b = 13;
  // Whether the device supports class C.
  // Copied on creation from template identified by version_ids, if any or from the home Network Server device profile, if any.
  bool supports_class_c = 14;
  // LoRaWAN MAC version. Stored in Network Server.
  // Copied on creation from template identified by version_ids, if any or from the home Network Server device profile, if any.
  MACVersion lorawan_version = 15 [(gogoproto.customname) = "LoRaWANVersion"];
  // LoRaWAN PHY version. Stored in Network Server.
  // Copied on creation from template identified by version_ids, if any or from the home Network Server device profile, if any.
  PHYVersion lorawan_phy_version = 16 [(gogoproto.customname) = "LoRaWANPHYVersion"];
  // ID of the frequency plan used by this device.
  // Copied on creation from template identified by version_ids, if any or from the home Network Server device profile, if any.
  string frequency_plan_id = 17 [(gogoproto.customname) = "FrequencyPlanID"];
  // Default MAC layer parameters, to which device is reset by default (e.g. on join or ResetInd). Stored in Network Server.
  // Copied on creation from template identified by version_ids, if any or from the home Network Server device profile, if any.
  MACParameters default_mac_parameters = 18 [(gogoproto.customname) = "DefaultMACParameters"];
  // Minimum frequency the device is capable of using (Hz). Stored in Network Server.
  // Copied on creation from template identified by version_ids, if any or from the home Network Server device profile, if any.
  uint64 min_frequency = 19;
  // Maximum frequency the device is capable of using (Hz). Stored in Network Server.
  // Copied on creation from template identified by version_ids, if any or from the home Network Server device profile, if any.
  uint64 max_frequency = 20;
  // Whether the device resets the frame counters (not LoRaWAN compliant). Stored in Network Server.
  // Copied on creation from template identified by version_ids, if any or from the home Network Server device profile, if any.
  bool resets_f_cnt = 21;
  // Whether the device uses 32-bit frame counters. Stored in Network Server.
  // Copied on creation from template identified by version_ids, if any or from the home Network Server device profile, if any.
  bool uses_32_bit_f_cnt = 22 [(gogoproto.customname) = "Uses32BitFCnt"];
  // The device supports join (it's OTAA).
  // Copied on creation from template identified by version_ids, if any or from the home Network Server device profile, if any.
  bool supports_join = 23;
  // Whether the device resets the join and dev nonces (not LoRaWAN 1.1 compliant). Stored in Network Server.
  // Copied on creation from template identified by version_ids, if any or from the home Network Server device profile, if any.
  bool resets_join_nonces = 24;

  // Device root keys. Stored in Join Server.
  RootKeys root_keys = 25;

  // Home NetID. Stored in Join Server.
  bytes net_id = 26 [(gogoproto.customtype) = "go.thethings.network/lorawan-stack/pkg/types.NetID", (gogoproto.customname) = "NetID"];
  // Settings for how the Network Server handles MAC for this device. Stored in Network Server.
  MACSettings mac_settings = 27 [(gogoproto.customname) = "MACSettings"];
  // MAC state of the device. Stored in Network Server.
  MACState mac_state = 28 [(gogoproto.customname) = "MACState"];
  // Current session. Stored in Network Server and Application Server.
  Session session = 29;
  // Pending session. Stored in Network Server and Application Server until RekeyInd is received.
  Session pending_session = 30;

  // Last DevNonce used.
  // This field is only used for devices using LoRaWAN version 1.1 and later.
  // Stored in Join Server.
  uint32 last_dev_nonce = 31;
  // Used DevNonces sorted in ascending order.
  // This field is only used for devices using LoRaWAN versions preceding 1.1.
  // Stored in Join Server.
  repeated uint32 used_dev_nonces = 32;
  // Last JoinNonce/AppNonce(for devices using LoRaWAN versions preceding 1.1) used.
  // Stored in Join Server.
  uint32 last_join_nonce = 33;
  // Last Rejoin counter value used (type 0/2).
  // Stored in Join Server.
  uint32 last_rj_count_0 = 34 [(gogoproto.customname) = "LastRJCount0"];
  // Last Rejoin counter value used (type 1).
  // Stored in Join Server.
  uint32 last_rj_count_1 = 35 [(gogoproto.customname) = "LastRJCount1"];

  // Time when last DevStatus MAC command was received.
  // Stored in Network Server.
  google.protobuf.Timestamp last_dev_status_received_at = 36 [(gogoproto.stdtime) = true];
  // The power state of the device; whether it is battery-powered or connected to an external power source.
  // Received via the DevStatus MAC command at status_received_at.
  // Stored in Network Server.
  PowerState power_state = 37;
  // Latest-known battery percentage of the device.
  // Received via the DevStatus MAC command at last_dev_status_received_at or earlier.
  // Stored in Network Server.
  float battery_percentage = 38;
  // Demodulation signal-to-noise ratio (dB).
  // Received via the DevStatus MAC command at last_dev_status_received_at.
  // Stored in Network Server.
  int32 downlink_margin = 39;

  // Recent uplink messages with ADR bit set to 1 sorted by time. Stored in Network Server.
  // The field is reset each time an uplink message carrying MACPayload is received with ADR bit set to 0.
  // The number of messages stored is in the range [0,20];
  repeated UplinkMessage recent_adr_uplinks = 40 [(gogoproto.customname) = "RecentADRUplinks"];
  // Recent uplink messages sorted by time. Stored in Network Server.
  // The number of messages stored may depend on configuration.
  repeated UplinkMessage recent_uplinks = 41;
  // Recent downlink messages sorted by time. Stored in Network Server.
  // The number of messages stored may depend on configuration.
  repeated DownlinkMessage recent_downlinks = 42;
  // Queued Application downlink messages. Stored in Application Server,
  // which sets them on the Network Server.
  repeated ApplicationDownlink queued_application_downlinks = 43;

  // The payload formatters for this end device. Stored in Application Server.
  // Copied on creation from template identified by version_ids.
  MessagePayloadFormatters formatters = 44;
}

message EndDevices {
  repeated EndDevice end_devices = 1;
}

message CreateEndDeviceRequest {
  EndDevice end_device = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
}

message UpdateEndDeviceRequest {
  EndDevice end_device = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
  google.protobuf.FieldMask field_mask = 2 [(gogoproto.nullable) = false];
}

message GetEndDeviceRequest {
  EndDeviceIdentifiers end_device_ids = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
  google.protobuf.FieldMask field_mask = 2 [(gogoproto.nullable) = false];
}

message ListEndDevicesRequest {
  ApplicationIdentifiers application_ids = 1 [(gogoproto.embed) = true, (gogoproto.nullable) = false];
  google.protobuf.FieldMask field_mask = 2 [(gogoproto.nullable) = false];
  // Order the results by this field path (must be present in the field mask).
  // Default ordering is by ID. Prepend with a minus (-) to reverse the order.
  string order = 3;
  // Limit the number of results per page.
  uint32 limit = 4;
  // Page number for pagination. 0 is interpreted as 1.
  uint32 page = 5;
}

message SetEndDeviceRequest {
  EndDevice device = 1 [(gogoproto.nullable) = false];
  google.protobuf.FieldMask field_mask = 2 [(gogoproto.nullable) = false];
}
